--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="timeline-dot is-active"></div>
             <div class="timeline-content">
               <div class="timeline-header">
-                <h3>Product Data Scientist · Easley Union Productions, Inc.</h3>
+                <h3>Product Data Scientist · Easley Dunn Productions, Inc.</h3>
                 <span class="timeline-date">Aug 2025 - Present</span>
               </div>
               <p class="timeline-summary">
