--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <span class="timeline-date">Aug 2025 - Present</span>
               </div>
               <p class="timeline-summary">
-                Built clinical analytics products for longitudinal veterinary data.
+                Building clinical analytics products for longitudinal veterinary data.
               </p>
               <ul>
                 <li>
