--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
                 I am a data scientist focused on product analytics, ML research,
                 and data engineering. I translate complex data into clear,
                 decision-ready insights with a focus on reliability and impact.
+                AI has fundamentally shifted the "Build vs. Buy" conversation. I’m obsessed with the full-stack data workflow: taking an idea from a notebook sketch to a live, scalable application that users actually interact with.
+                This portfolio is my Learning Lab. It’s where I close the loop between raw data and actionable software.
+              </p>
+            </div>
+            <div class="about-block">
+              <h3>Beyond the Screen</h3>
+              <p>
+                I’m usually found getting lost in a classic novel, exploring new nature trails, or catching a sunset with a paintbrush in hand.
               </p>
             </div>
           </div>
