--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,9 @@
           <p class="eyebrow">Projects</p>
           <h1>Interactive data science products</h1>
           <p class="lede">
-            Each project is designed to feel like a real product — clear
-            hypotheses, interactive controls, and measurable outcomes.
+            The Goal: Mastering the 0→1 loop—prototyping, deploying, and optimizing.
+            The Tech: I’m currently geeking out over Python-driven pipelines, real-time analytics, and building robust architectures that don't just store data, but leverage it.
+            The Philosophy: Build, break, learn, repeat. Everything here is open-source and driven by curiosity.
           </p>
         </div>
       </section>
