--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="logo" href="#home">Swachandrika Rudra</a>
         <div class="nav-actions">
           <a href="#experience">Experience</a>
-          <a href="projects.html" target="_blank" rel="noreferrer">Projects</a>
+          <a href="projects.html">Projects</a>
           <a href="#contact">Contact</a>
           <button class="theme-toggle" type="button" aria-label="Toggle theme">
             Toggle Theme
@@ -30,11 +30,15 @@
       <section id="home" class="section hero">
         <div class="hero-copy">
           <p class="eyebrow">Data Scientist · Los Angeles, CA</p>
-          <h1>Building reliable data products that make complex decisions simple.</h1>
+          <h1>
+            Revealing the <span class="true-focus-word">stories hidden in</span> <br> the world of data
+          </h1>
           <p class="lede">
             I am a data scientist with experience in clinical analytics,
-            large-scale data pipelines, and ML research. I enjoy turning noisy,
-            high-volume data into clear narratives and decision-ready tools.
+            large-scale data pipelines, and ML research. I enjoy turning
+            noisy, high-volume data into clear narratives and decision-ready
+            tools. This portfolio is my learning lab where I dissect data, 
+            prototype tools, embrace failures, and build things that actually work.
           </p>
           <div class="cta-row">
             <a class="button primary" href="mailto:rikarudra23@gmail.com"
@@ -47,7 +51,9 @@
               rel="noreferrer"
               >Connect on LinkedIn</a
             >
+            <a class="button ghost" href="projects.html">Explore my Data Lab</a>
           </div>
+
         </div>
         <figure class="hero-figure">
           <img
@@ -96,23 +102,28 @@
             <div class="about-block">
               <h3>About Me</h3>
               <p>
-                I am a data scientist focused on product analytics, ML research,
-                and data engineering. I translate complex data into clear,
-                decision-ready insights with a focus on reliability and impact.
-                AI has fundamentally shifted the "Build vs. Buy" conversation. I’m obsessed with the full-stack data workflow: taking an idea from a notebook sketch to a live, scalable application that users actually interact with.
-                This portfolio is my Learning Lab. It’s where I close the loop between raw data and actionable software.
+                I found my way into data science through my background in healthcare, 
+                where I learned early that data is rarely clean or straightforward
+                but decisions still need to be made, 
+                and there are always people on the other side of those decisions being affected by it. 
+                That perspective shaped the way I approach my work, grounding it in empathy, accountability, and an eye for precision.
+               
+                <br>I’m early in my career and still growing into the kind of data professional I want to become, 
+                but I know I’m drawn to work that creates tangible impact and improves how people receive care, 
+                make decisions, or solve complex problems. 
               </p>
             </div>
             <div class="about-block">
               <h3>Beyond the Screen</h3>
               <p>
-                I’m usually found getting lost in classic old-literature novels, exploring new nature trails, or catching sunrises with a paintbrush in hand.
+                Outside of data, I like to immerse myself in creative pursuits such as reading classic literature, 
+                writing, painting, exploring new nature trails, and catching sunrises.
+                I’m also passionate about fitness, yoga, and mindfulness, which help me stay grounded and creative.
               </p>
             </div>
           </div>
         </div>
       </section>
-
 
       <section id="experience" class="section">
         <div class="section-split">
